# Vanna

./: .gitignore  Cargo.toml  README.md  dune-project  start_replicas.sh  vanna.opam
.github/workflows/: ci.yml
kek/: Cargo.toml
kek/lib/: client.rs  client_table.rs  configuration.rs  io.rs  kvstore.rs  log.rs  message.rs  mod.rs  operation.rs  replica.rs  utils.rs
lib/: client.ml  client.rs  client_protocol.ml  client_table.rs  configuration.ml  configuration.mli  configuration.rs  dune  kvstore.rs  log.ml  log.rs  message.ml  message.rs  message_bus.rs  mod.rs  network.rs  operation.ml  operation.rs  proxy.ml  replica.ml  replica.rs  take_two.rs  types.rs  utils.ml  utils.rs  vsr.ml
reference/lib/: client.ml  kvstore.ml  log.ml  message.ml  replica.ml
test/: dune
