[package]
name = "kek"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
tokio-util = { version = "0.7.13", features = ["full"] }
futures-util = { version = "0.3.31", features = ["sink"] }
hashbrown = "0.15.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
log = "0.4.22"
env_logger = "0.11.6"
uuid = { version = "1.11.0", features = ["arbitrary", "v4"] }

