[package]
name = "kek"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ring-log = "0.2.12"
tokio = { version = "1.42.0", features = ["net"] }
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
