[package]
name = "kek"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ring-log = "0.2.15"
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
once_cell = "1.20.2"
bytes = { version = "1", features = ["serde"] }
tokio-util = { version = "0.7.13", features = ["full"] }
futures-util = { version = "0.3.31", features = ["sink"] }
hashbrown = "0.15.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
